<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Flavor -->
    <TextView
        android:id="@+id/flavorTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/cupcakeFlavor"
        android:textStyle="bold" />
    <Spinner
    	android:id="@+id/flavorSpinner"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentRight="true"
    	android:layout_alignBaseline="@id/flavorTxt"
    	android:entries="@array/cupcake_flavors"
    	android:spinnerMode="dropdown" />

    <!-- Filling -->
    <TextView
        android:id="@+id/fillingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/cupcakeFilling"
        android:textStyle="bold" />
    <Switch
    	android:id="@+id/fillingSwitch"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/fillingTxt"
    	android:layout_alignParentRight="true"
    	android:layout_alignBaseline="@id/fillingTxt" />
    <RadioGroup 
        android:id="@+id/fillingOpts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fillingTxt"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" 
        android:checkedButton="@+id/vanillaOpt" >
        <RadioButton
            android:id="@id/vanillaOpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vanilla" />
        <RadioButton
            android:id="@+id/fudgeOpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fudge" />
        <RadioButton
            android:id="@+id/raspberryOpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raspberry" />
    </RadioGroup>
    
    <!-- Frosting -->
    <TextView
        android:id="@+id/frostingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="230dp"
        android:text="@string/cupcakeFrosting"
        android:textStyle="bold" />
    <Spinner
    	android:id="@+id/frostingSpinner"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentRight="true"
    	android:layout_alignBaseline="@id/frostingTxt"
    	android:entries="@array/cupcake_frostings"
    	android:spinnerMode="dropdown" />
    
    <!-- Topping -->
    <TextView
        android:id="@+id/toppingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="280dp"
        android:text="@string/toppings"
        android:textStyle="bold"
        android:drawableRight="@drawable/add"
        android:drawablePadding="10dp" />
    <TextView 
        android:id="@+id/toppingsList"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_below="@id/toppingTxt"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/outline" />
    
    <!-- Order -->
    <TextView 
        android:id="@+id/quantityTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/toppingsList"
        android:paddingLeft="10dp" 
        android:paddingTop="25dp"
        android:text="@string/selectQuantity"
        android:textSize="20sp"
        android:textStyle="bold" />
    <EditText 
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/quantityTxt"
        android:layout_alignParentRight="true"
        android:hint="@string/quantity" />
    <Button
        android:id="@+id/orderBtn"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantityTxt"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/order" />"

</RelativeLayout>
